--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ html {
 
 body {
   background-color: #fff;
-  position: relative;
 }
 
 body,
@@ -425,12 +424,14 @@ li {
 }
 
 .hero {
+  width: 100%;
   height: 1113px;
+  background-image: url(../../assets/images/hero-bg.png);
+  background-size: cover;
   position: absolute;
   top: -100px;
   left: 0;
   z-index: -100;
-  background-color: rgb(0, 0, 0);
 }
 .hero .hero-desktop {
   display: none;
@@ -469,7 +470,8 @@ li {
 .hero__images {
   width: 100%;
   height: 450px;
-  overflow: hidden;
+  background: url(../../assets/images/grid-elem.png) no-repeat left top;
+  background-size: cover;
   position: relative;
 }
 .hero__img-content-bg {
@@ -942,11 +944,9 @@ li {
   }
   .hero__images {
     height: 650px;
-    border: 5px solid rgb(143, 129, 64);
   }
   .hero__img-content-bg {
     height: 650px;
-    border: 5px solid rgb(64, 79, 143);
   }
   .hero__img-content-bg .composition-bg__img--p1 {
     top: 57%;
@@ -1175,26 +1175,98 @@ li {
     padding-left: 245px;
   }
   .hero {
+    width: 100%;
+    height: 1029px;
+    background: url(./assets/images/hero-bg.png) no-repeat left top, url(./assets/images/grid-elem.png) no-repeat left top;
+    background-size: cover, cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -10;
     padding-left: 245px;
-  }
-  .hero .hero-desktop {
-    display: block;
+    overflow-x: hidden;
+    background-color: rgb(0, 0, 0);
   }
   .hero .hero-mobile {
     display: none;
   }
-  .hero__container {
+  .hero .hero-desktop {
     display: block;
-    width: 100vw;
+  }
+  .hero__container {
+    max-width: 1660px;
     height: 1029px;
+    background-color: transparent;
+    position: relative;
+  }
+  .hero__text-content {
+    width: 60%;
   }
   .hero__img-content-bg {
+    height: 1029;
+    width: 100%;
     position: absolute;
     top: 0;
+    left: 0;
   }
-  .hero .img-top-shape {
+  .hero__img-content-bg .composition-bg {
+    width: 100%;
     height: 1029px;
-    height: 88px;
+    position: relative;
+  }
+  .hero__img-content-bg .composition-bg__img--p1 {
+    width: 100%;
+    position: absolute;
+    right: 0;
+    top: 5px;
+  }
+  .hero__img-content-bg .composition-bg__img--p2 {
+    position: absolute;
+    top: 0;
+    right: 200px;
+  }
+  .hero__images {
+    width: 100%;
+    height: 1029px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 3px solid red;
+  }
+  .hero__img-content {
+    width: 100%;
+    height: 1029px;
+    border: 3px solid rgb(195, 0, 255);
+  }
+  .hero .composition {
+    width: 100%;
+    height: 1029px;
+    transform: translateX(10%);
+    position: relative;
+    border: 3px solid rgb(0, 26, 255);
+  }
+  .hero .composition__img--p1 {
+    width: 1000px !important;
+    position: absolute;
+    top: 0 !important;
+    left: 700px !important;
+  }
+  .hero .composition__img--p4 {
+    position: absolute;
+    top: 108px;
+    left: 0;
+  }
+  .hero .composition__img--p2 {
+    width: 176px !important;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .hero .composition__img--p3 {
+    width: 146px;
+    position: absolute;
+    top: 600px;
+    left: 0;
   }
   .campanies {
     padding-left: 245px;
@@ -1207,7 +1279,10 @@ li {
     padding-left: 245px;
     overflow: hidden;
   }
-  .about .home-img {
+  .about .home-img--top {
+    width: 910px;
+  }
+  .about .home-img--bottom {
     transform: translateX(5%);
   }
   .services {
@@ -1224,33 +1299,33 @@ li {
   .testimonials .testimonials-mobile {
     display: none;
   }
-  .testimonials__container {
-    border: 1px solid rgb(0, 255, 98);
-  }
   .testimonials__paragraph-text-light {
     width: 40%;
   }
   .testimonials__carousel {
     height: 500px;
-    border: 1px solid rgb(4, 0, 255);
   }
   .testimonials .carousel-inner {
-    border: 1px solid rgb(143, 129, 64);
     width: 100%;
     height: 500px;
     display: flex;
     flex-direction: row;
+    position: relative;
   }
   .testimonials .carousel__list {
     height: 500px;
-    flex: 0 1 35%;
+    flex: 0 1 32%;
+    position: relative;
+  }
+  .testimonials .carousel__timeline {
+    height: 100%;
+    flex: 0 1 5%;
     position: relative;
   }
   .testimonials .carousel__item-content {
-    height: 500px;
-    flex: 0 1 65%;
-    position: relative;
-    border: 1px solid red;
+    flex: 0 1 63%;
+    display: flex;
+    flex-direction: column;
   }
   .testimonials .carousel__list {
     position: relative;
@@ -1280,8 +1355,75 @@ li {
     top: 80%;
     right: 75px;
   }
+  .testimonials .carousel__item-box {
+    padding: 100px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .testimonials .carousel__item-box::before, .testimonials .carousel__item-box::after {
+    display: inline-block;
+    width: 24px;
+    height: 2px;
+    background-color: #fff;
+  }
+  .testimonials .carousel__item-box::before {
+    content: "";
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url("https://www.badinsoft.com/wp-content/themes/badin-soft-theme/assets/badin-photo/testimonials/home/quote-open.svg") no-repeat center center;
+    background-size: contain;
+    position: absolute;
+  }
+  .testimonials .carousel__item-box::after {
+    content: "";
+    display: block;
+    width: 100px;
+    height: 100px;
+    padding: 5px;
+    background: url("https://www.badinsoft.com/wp-content/themes/badin-soft-theme/assets/badin-photo/testimonials/home/quote-close.svg") no-repeat center center;
+    background-size: contain;
+    position: absolute;
+  }
+  .testimonials .carousel__item-box::before {
+    top: -40px;
+  }
+  .testimonials .carousel__item-box::after {
+    bottom: 100px;
+    right: 100px;
+  }
+  .testimonials .carousel__paragraph-text-italic {
+    margin-bottom: 32px;
+  }
+  .testimonials .carousel .carousel__timeline {
+    position: absolute;
+    left: 400px;
+    top: 100px;
+    width: 3px;
+    height: 250px;
+    background-color: #dae0fe;
+    border-radius: 1px;
+    padding-top: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .testimonials .carousel .carousel__timeline span {
+    display: block;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background-color: #f9fafe;
+    margin-bottom: 32px;
+    border: 2px solid #dae0fe;
+  }
   .hire-us .projects {
     padding-left: 245px;
+  }
+  .hire-us .button__blue {
+    display: block;
   }
   .positions {
     padding-left: 245px;
