--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,12 +13,15 @@ $color-red: #ed701d;
 $color-green: #1ebf73;
 
 $color-black: #1a1a1a;
+$color-black-base:black;
 $color-white: #fff;
 $color_lightgrey: #f5f5f5;
 $color_lightgrey-1: #f8f8f8;
 $color-grey-dark-1: rgba(255, 255, 255, 0.5);
 $color-grey-dark: rgba(255, 255, 255, 0.15);
 $color-grey-dark-2: #393939;
+
+$color-timeline: #dae0fe;
 
 //Font
 $default-font-size: 1rem;
