--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -2,16 +2,15 @@
   .hero-desktop {
     display: none;
   }
-
+  width: 100%;
   height: 1113px;
-  // background: url("../../assets/images/hero-bg.png") no-repeat left center;
-  //   background-size: cover;
-
+  background-image: url(../../assets/images/hero-bg.png) ;
+  background-size: cover;
+  
   position: absolute;
   top: -100px;
   left: 0;
   z-index: -100;
-  background-color: rgb(0, 0, 0);
 
   &__container {
     width: 100%;
@@ -55,15 +54,15 @@
   &__images {
     width: 100%;
     height: 450px;
-    overflow: hidden;
+    //overflow: hidden;
+    background: url(../../assets/images/grid-elem.png) no-repeat left top;
+    background-size: cover;
     position: relative;
   }
 
   &__img-content-bg {
     width: 100%;
-    height: 450px;
-    // background: url(../../assets/images/grid-elem.png) no-repeat center center;
-    // background-size: cover;
+    height: 450px;    
     position: relative;
 
     .composition-bg__img {
@@ -305,7 +304,7 @@
       }
     }
 
-    &__list {      
+    &__list {
       position: relative;
       margin-bottom: 32px;
 
