--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -58,13 +58,13 @@
       width: 100px;
       border-radius: 50%;
       background-color: transparent;
-      transform: translatex(-80px);      
+      transform: translatex(-80px);
     }
 
     &__icon,
     &__icon::before,
     &__icon::after {
-      background-color: black;
+      background-color: $color-black-base;
       width: 20px;
     }
 
@@ -74,10 +74,52 @@
       top: 40px;
       left: 5px;
       transform: rotate(-90deg);
-      color: black;
+      color: $color-black-base;
       content: "MENU";
       font-size: 1.2rem;
       letter-spacing: 3px;
+    }
+
+    &__navbar.open {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      z-index: 1500;
+
+      width: 0;
+      opacity: 0;
+      transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+
+    &__list {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      list-style: none;
+      text-align: center;
+      width: 100%;
+    }
+
+    &__item {
+      margin: 400px;
+    }
+
+    // ICON   
+
+    &__button.open &__icon {
+      background-color: transparent;
+
+      &::before {
+        top: 0;
+        transform: rotate(135deg);
+      }
+
+      &::after {
+        top: 0;
+        transform: rotate(-135deg);
+      }
     }
   }
 }
