--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,18 @@ a {
   box-shadow: rgba(17, 17, 26, 0.4) 0px 8px 24px, rgba(17, 17, 26, 0.2) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
 }
 
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    left: 20%;
+  }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+/* breakpoint 1660px */
 @keyframes scroll-left {
   100% {
     translate: calc(-100% + 100px);
@@ -878,15 +890,37 @@ li {
 }
 
 .navigation {
-  width: 24px;
-  height: 21px;
+  width: 100vw;
+  height: 100px;
 }
 .navigation__button {
-  width: inherit;
-  height: inherit;
+  width: 24px;
+  height: 21px;
   all: unset;
+  position: absolute;
+  top: 30px;
+  right: 16px;
+  z-index: 1000;
   display: flex;
   justify-content: center;
+}
+.navigation__button.full-menu {
+  padding: 0;
+  position: absolute;
+  top: 30px;
+  right: 16px;
+  transition: all 0.3s;
+}
+.navigation__button.full-menu .navigation__icon {
+  background-color: transparent;
+}
+.navigation__button.full-menu .navigation__icon::before {
+  top: 0;
+  transform: rotate(135deg);
+}
+.navigation__button.full-menu .navigation__icon::after {
+  top: 0;
+  transform: rotate(-135deg);
 }
 .navigation__icon {
   position: relative;
@@ -907,74 +941,141 @@ li {
   transition: all 0.2s;
 }
 .navigation__icon::before {
-  top: -5px;
+  top: -7px;
 }
 .navigation__icon::after {
-  top: 5px;
+  top: 7px;
+}
+.navigation__background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  opacity: 0;
+  visibility: hidden;
+  overflow: hidden;
+  background-image: linear-gradient(#317ade, #0e3378);
+  z-index: 50;
+}
+.navigation__background.open {
+  opacity: 1;
+  visibility: visible;
+  height: 100vh;
+  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.navigation__background.open .logo_container {
+  position: absolute;
+  top: 50px;
+  left: 16px;
+}
+.navigation__background.open li {
+  animation: fadeInRight 0.5s ease forwards;
+  animation-delay: 0.35s;
+}
+.navigation__background.open li:nth-of-type(2) {
+  animation-delay: 0.4s;
+}
+.navigation__background.open li:nth-of-type(3) {
+  animation-delay: 0.45s;
+}
+.navigation__background.open li:nth-of-type(4) {
+  animation-delay: 0.5s;
+}
+.navigation__background.open li:nth-of-type(5) {
+  animation-delay: 0.55s;
+}
+.navigation__background.open li:nth-of-type(6) {
+  animation-delay: 0.6s;
+}
+.navigation__background.open li:nth-of-type(7) {
+  animation-delay: 0.65s;
+}
+.navigation__logo {
+  width: 98px;
+  height: 35px;
+  position: fixed;
+  top: 31px;
+  left: 16px;
+  z-index: 150;
+}
+.navigation__logo .logo {
+  width: inherit;
+  height: inherit;
+}
+.navigation__navbar {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 75;
+}
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+  width: 100%;
+}
+.navigation__item {
+  display: block;
+  height: 25%;
+  height: 14.2857142857%;
+  min-height: 50px;
+  position: relative;
+  opacity: 0;
+}
+.navigation__link {
+  display: block;
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+  overflow: hidden;
+  opacity: 0.7;
+  transform: scale(1);
+  transition: all 0.3s;
+}
+.navigation__link:hover, .navigation__link:focus, .navigation__link:active {
+  opacity: 1;
+  transform: scale(1.2);
+  transition: all 0.3s;
 }
 
 /* breakpoint 1660px */
 @media screen and (min-width: 1660px) {
   .navigation {
-    position: fixed;
-    top: 50%;
-    left: 16px;
-    z-index: 100;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
   }
   .navigation__button {
     height: 100px;
     width: 100px;
     border-radius: 50%;
+    position: fixed;
+    top: 40%;
+    left: 60px;
     background-color: transparent;
     transform: translatex(-80px);
   }
-  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
-    background-color: black;
-    width: 20px;
-  }
-  .navigation::after {
+  .navigation__button::after {
     display: block;
     position: absolute;
     top: 40px;
-    left: 5px;
+    left: 55px;
     transform: rotate(-90deg);
     color: black;
     content: "MENU";
     font-size: 1.2rem;
     letter-spacing: 3px;
   }
-  .navigation__navbar.open {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    z-index: 1500;
-    width: 0;
-    opacity: 0;
-    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  .navigation__list {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    list-style: none;
-    text-align: center;
-    width: 100%;
-  }
-  .navigation__item {
-    margin: 400px;
-  }
-  .navigation__button.open .navigation__icon {
-    background-color: transparent;
-  }
-  .navigation__button.open .navigation__icon::before {
-    top: 0;
-    transform: rotate(135deg);
-  }
-  .navigation__button.open .navigation__icon::after {
-    top: 0;
-    transform: rotate(-135deg);
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    background-color: black;
+    width: 20px;
   }
 }
 /* breakpoint 768px */
