--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,14 +1,40 @@
 .navigation {
-  width: 24px;
-  height: 21px;
+  width: 100vw;
+  height: 100px;
 
   &__button {
-    width: inherit;
-    height: inherit;
+    width: 24px;
+    height: 21px;
     all: unset;
+    position: absolute;
+    top: 30px;
+    right: 16px;
+    z-index: 1000;
 
     display: flex;
     justify-content: center;
+
+    &.full-menu {
+      padding: 0;
+      position: absolute;
+      top: 30px;
+      right: 16px;
+      transition: all 0.3s;
+    }
+  }
+
+  &__button.full-menu &__icon {
+    background-color: transparent;
+
+    &::before {
+      top: 0;
+      transform: rotate(135deg);
+    }
+
+    &::after {
+      top: 0;
+      transform: rotate(-135deg);
+    }
   }
 
   &__icon {
@@ -35,30 +61,164 @@
     }
 
     &::before {
-      top: -5px;
-      //transform-origin: right;
+      top: -7px;
     }
 
     &::after {
-      top: 5px;
+      top: 7px;
+    }
+  }
+
+  &__background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    opacity: 0;
+    visibility: hidden;
+    overflow: hidden;
+    background-image: linear-gradient($color-blue, $color-background-tertiary);
+    z-index: 50;
+
+    &.open {
+      opacity: 1;
+      visibility: visible;
+      height: 100vh;
+      transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+      .logo_container {
+        position: absolute;
+        top: 50px;
+        left: 16px;
+      }
+
+      li {
+        animation: fadeInRight 0.5s ease forwards;
+        animation-delay: 0.35s;
+
+        &:nth-of-type(2) {
+          animation-delay: 0.4s;
+        }
+
+        &:nth-of-type(3) {
+          animation-delay: 0.45s;
+        }
+
+        &:nth-of-type(4) {
+          animation-delay: 0.5s;
+        }
+
+        &:nth-of-type(5) {
+          animation-delay: 0.55s;
+        }
+
+        &:nth-of-type(6) {
+          animation-delay: 0.6s;
+        }
+
+        &:nth-of-type(7) {
+          animation-delay: 0.65s;
+        }
+      }
+    }
+  }
+
+  &__logo {
+    width: 98px;
+    height: 35px;
+
+    position: fixed;
+    top: 31px;
+    left: 16px;
+    z-index: 150;
+
+    .logo {
+      width: inherit;
+      height: inherit;
+    }
+  }
+
+  &__navbar {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 75;
+  }
+
+  &__list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    text-align: center;
+    width: 100%;
+  }
+
+  &__item {
+    display: block;
+    height: 25%;
+    height: calc(100% / 7);
+    min-height: 50px;
+    position: relative;
+    opacity: 0;
+  }
+
+  &__link {
+    display: block;
+    position: relative;
+    color: $color-white;
+    text-decoration: none;
+    overflow: hidden;
+    opacity: 0.7;
+    transform: scale(1);
+    transition: all 0.3s;
+
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 1;
+      transform: scale(1.2);
+      transition: all 0.3s;
     }
   }
 }
 
+//
 /* breakpoint 1660px */
 @media screen and (min-width: 1660px) {
   .navigation {
-    position: fixed;
-    top: 50%;
-    left: 16px;
-    z-index: 100;
+    position: absolute;
+    top: 0;
+    left: 0;    
+    z-index: 2;
+
 
     &__button {
       height: 100px;
       width: 100px;
       border-radius: 50%;
+      position: fixed;
+      top: 40%;
+      left: 60px;
+
       background-color: transparent;
       transform: translatex(-80px);
+
+      &::after {
+        display: block;
+        position: absolute;
+        top: 40px;
+        left: 55px;
+        transform: rotate(-90deg);
+        color: $color-black-base;
+        content: "MENU";
+        font-size: 1.2rem;
+        letter-spacing: 3px;
+      }
     }
 
     &__icon,
@@ -68,58 +228,6 @@
       width: 20px;
     }
 
-    &::after {
-      display: block;
-      position: absolute;
-      top: 40px;
-      left: 5px;
-      transform: rotate(-90deg);
-      color: $color-black-base;
-      content: "MENU";
-      font-size: 1.2rem;
-      letter-spacing: 3px;
-    }
-
-    &__navbar.open {
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      z-index: 1500;
-
-      width: 0;
-      opacity: 0;
-      transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    }
-
-    &__list {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      list-style: none;
-      text-align: center;
-      width: 100%;
-    }
-
-    &__item {
-      margin: 400px;
-    }
-
-    // ICON   
-
-    &__button.open &__icon {
-      background-color: transparent;
-
-      &::before {
-        top: 0;
-        transform: rotate(135deg);
-      }
-
-      &::after {
-        top: 0;
-        transform: rotate(-135deg);
-      }
-    }
+    
   }
 }
